# TxLine_Trading_Tool_Agent

./: .gitignore  Anchor.toml  README.md  Script.txt
backend/: .env.example  package-lock.json  package.json
backend/public/: index.html
backend/public/assets/: index-2DA9TL9O.css  index-CmlDEHbZ.js
backend/src/: agents.ts  chain.ts  env.ts  feed.ts  index.ts  merkle.ts  state.ts  txline-league.ts  txline-probe.ts  txline.ts  types.ts
frontend/: .railwayignore  index.html  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
frontend/legacy/: index.html  server.ts
frontend/src/: App.tsx  api.ts  crypto.ts  main.tsx  styles.css  types.ts  vite-env.d.ts
frontend/src/components/: BackPanel.tsx  Header.tsx  Leaderboard.tsx  Matches.tsx  Orbs.tsx  ProtocolLog.tsx  ReceiptCard.tsx
frontend/src/solana/: WalletCtx.tsx  program.ts
programs/oracle-league/src/: lib.rs
programs/sealed-league/: Cargo.toml
